# x-serialization-format

./: Cargo.toml  README.md  justfile
.github/workflows/: build.yaml
data-macros/: Cargo.toml
data-macros/src/: common.rs  lib.rs  structure.rs  test.rs
old-macros/: Cargo.toml
old-macros/src/: common.rs  error.rs  lib.rs  structure.rs
src/: alloc_impls.rs  allocator.rs  anonymous_serializer.rs  array.rs  bool.rs  char.rs  common.rs  continuation.rs  done.rs  error.rs  fallible_vec_allocator.rs  file_allocator.rs  foo.rs  from_view.rs  i8.rs  integer.rs  into_allocator.rs  is.rs  isize.rs  lib.rs  maybe_uninit_ext.rs  offset.rs  option.rs  padding_serializer.rs  primitive.rs  range_ext.rs  redo.rs  result.rs  serialize.rs  serializer.rs  size.rs  slice.rs  slice_allocator.rs  slice_ext.rs  stack.rs  state.rs  str.rs  string.rs  test.rs  to_i64.rs  (+13 more)
tests/: lib.rs
x-derive/: Cargo.toml
x-derive/src/: common.rs  error.rs  input_attributes.rs  lib.rs  structure.rs  test.rs
