[package]
name      = "x"
version   = "0.0.0"
authors   = ["Casey Rodarmor <casey@rodarmor.com>"]
edition   = "2018"
autotests = false

[features]
default = []
alloc = []

[dependencies]
x-derive = { path = "x-derive" }
static_assertions = "1.1.0"

[workspace]
members = [
  # derive procedural macro
  "x-derive",
]

[[test]]
name = "integration"
path = "tests/lib.rs"
